{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 230,
  "lineage": "e8f1bd03-9f74-c267-39cb-a2267d253067",
  "resources": [
    {
      "module": "module.instances.module.head_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06bc01540a677d796",
            "arn": "arn:aws:ec2:eu-west-1:884848673965:instance/i-0f58c467af9c24508",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f58c467af9c24508",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.large",
            "ipv6_address_count": 0,
            "key_name": "mj-torrent",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0dfa9b046e9ff2e6c"
              }
            ],
            "primary_network_interface_id": "eni-0dfa9b046e9ff2e6c",
            "private_dns": "ip-10-0-13-163.eu-west-1.compute.internal",
            "private_ip": "10.0.13.163",
            "public_ip": "52.51.34.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0702c2a3146bafb49",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e",
            "tags": {
              "Name": "headnode-0"
            },
            "tags_all": {
              "Name": "headnode-0"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "headnode-0"
            },
            "vpc_security_group_ids": [
              "sg-0674eea71be52e362"
            ]
          },
          "dependencies": [
            "module.networking.aws_network_interface.headnode_network_interface",
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.instances.module.network_nodes[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06bc01540a677d796",
            "arn": "arn:aws:ec2:eu-west-1:884848673965:instance/i-02690624333830582",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02690624333830582",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mj-torrent",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fffc94b00a32fb8e"
              }
            ],
            "primary_network_interface_id": "eni-0fffc94b00a32fb8e",
            "private_dns": "ip-10-0-12-229.eu-west-1.compute.internal",
            "private_ip": "10.0.12.229",
            "public_ip": "52.49.248.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0903cc3ba53acc97f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e",
            "tags": {
            },
            "tags_all": {
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0674eea71be52e362",
              "sg-0f34ce843a02d4bac"
            ]
          },
          "dependencies": [
            "module.networking.aws_network_interface.node_network_interface",
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.instances.module.network_nodes[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06bc01540a677d796",
            "arn": "arn:aws:ec2:eu-west-1:884848673965:instance/i-0849106129d30881c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0849106129d30881c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mj-torrent",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d2ba04c24eb48969"
              }
            ],
            "primary_network_interface_id": "eni-0d2ba04c24eb48969",
            "private_dns": "ip-10-0-6-47.eu-west-1.compute.internal",
            "private_ip": "10.0.6.47",
            "public_ip": "34.243.245.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0041846527831f864",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e",
            "tags": {
            },
            "tags_all": {
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0674eea71be52e362",
              "sg-0f34ce843a02d4bac"
            ]
          },
          "dependencies": [
            "module.networking.aws_network_interface.node_network_interface",
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "headnode_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:network-interface/eni-0dfa9b046e9ff2e6c",
            "attachment": [
              {
                "attachment_id": "eni-attach-0797a5480ed00eab8",
                "device_index": 0,
                "instance": "i-0f58c467af9c24508"
              }
            ],
            "id": "eni-0dfa9b046e9ff2e6c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:64:a8:c6:8e:e5",
            "owner_id": "884848673965",
            "private_ip": "10.0.13.163",
            "private_ip_list": [
              "10.0.13.163"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.13.163"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0674eea71be52e362"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e"
          },
          "dependencies": [
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "node_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:network-interface/eni-0fffc94b00a32fb8e",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e4970387f2067f2b",
                "device_index": 0,
                "instance": "i-02690624333830582"
              }
            ],
            "id": "eni-0fffc94b00a32fb8e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:61:50:c1:80:83",
            "owner_id": "884848673965",
            "private_ip": "10.0.12.229",
            "private_ip_list": [
              "10.0.12.229"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.12.229"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0674eea71be52e362",
              "sg-0f34ce843a02d4bac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e"
          },
          "dependencies": [
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:network-interface/eni-0d2ba04c24eb48969",
            "attachment": [
              {
                "attachment_id": "eni-attach-0245c2e1ca62d74ab",
                "device_index": 0,
                "instance": "i-0849106129d30881c"
              }
            ],
            "id": "eni-0d2ba04c24eb48969",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6f:1b:91:0f:5b",
            "owner_id": "884848673965",
            "private_ip": "10.0.6.47",
            "private_ip_list": [
              "10.0.6.47"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.6.47"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0674eea71be52e362",
              "sg-0f34ce843a02d4bac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059b580d35cf5161e"
          },
          "dependencies": [
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:network-interface/eni-0d16f392ca95ea129",
            "id": "eni-0d16f392ca95ea129",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:80:8a:c4:62:91",
            "owner_id": "884848673965",
            "private_ip": "10.0.140.232",
            "private_ip_list": [
              "10.0.140.232"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.140.232"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f34ce843a02d4bac"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d9627bd374013b7"
          },
          "dependencies": [
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.private_network_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:security-group/sg-0f34ce843a02d4bac",
            "description": "Security group for open traffic in private network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f34ce843a02d4bac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20",
                  "10.0.128.0/20"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private network all open-20220616122811588300000001",
            "name_prefix": "private network all open-",
            "owner_id": "884848673965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private network all open"
            },
            "tags_all": {
              "Name": "private network all open"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.private_network_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2687847260",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f34ce843a02d4bac",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.private_network_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/20",
              "10.0.128.0/20"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-47328880",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f34ce843a02d4bac",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.private_network_sg.aws_security_group.this",
            "module.networking.module.private_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.public_network_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:security-group/sg-0674eea71be52e362",
            "description": "Security group for public network publicly open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0674eea71be52e362",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public network ssh, http, https-20220616122811590100000002",
            "name_prefix": "public network ssh, http, https-",
            "owner_id": "884848673965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public network ssh, http, https"
            },
            "tags_all": {
              "Name": "public network ssh, http, https"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking.module.public_network_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-138411830",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0674eea71be52e362",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.public_network_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3474168767",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0674eea71be52e362",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-785093732",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0674eea71be52e362",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-2801311433",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0674eea71be52e362",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.public_network_sg.aws_security_group.this",
            "module.networking.module.public_network_sg.aws_security_group.this_name_prefix",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c747bf7c70fe22f",
            "association_id": "eipassoc-04a89c606a4002b12",
            "domain": "vpc",
            "id": "eipalloc-03c747bf7c70fe22f",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07faff0c899481bb4",
            "private_dns": "ip-10-0-5-97.eu-west-1.compute.internal",
            "private_ip": "10.0.5.97",
            "public_dns": "ec2-54-76-86-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.76.86.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "distributed_test_env-vpc-eu-west-1b"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-eu-west-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:internet-gateway/igw-0c704836a5b6923dd",
            "id": "igw-0c704836a5b6923dd",
            "owner_id": "884848673965",
            "tags": {
              "Name": "distributed_test_env-vpc"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc"
            },
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c747bf7c70fe22f",
            "connectivity_type": "public",
            "id": "nat-07774ba8a4fae3b99",
            "network_interface_id": "eni-07faff0c899481bb4",
            "private_ip": "10.0.5.97",
            "public_ip": "54.76.86.236",
            "subnet_id": "subnet-059b580d35cf5161e",
            "tags": {
              "Name": "distributed_test_env-vpc-eu-west-1b"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-eu-west-1b"
            }
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07bbd0011b4bd15af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07774ba8a4fae3b99",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bbd0011b4bd15af",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c704836a5b6923dd",
            "id": "r-rtb-0e9a2a4ca867161921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9a2a4ca86716192",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:route-table/rtb-07bbd0011b4bd15af",
            "id": "rtb-07bbd0011b4bd15af",
            "owner_id": "884848673965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07774ba8a4fae3b99",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "distributed_test_env-vpc-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-private-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:route-table/rtb-0e9a2a4ca86716192",
            "id": "rtb-0e9a2a4ca86716192",
            "owner_id": "884848673965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c704836a5b6923dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "distributed_test_env-vpc-public"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0938500459eb045ba",
            "route_table_id": "rtb-07bbd0011b4bd15af",
            "subnet_id": "subnet-05d9627bd374013b7"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738f3c3664d3217f",
            "route_table_id": "rtb-0e9a2a4ca86716192",
            "subnet_id": "subnet-059b580d35cf5161e"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:subnet/subnet-05d9627bd374013b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9627bd374013b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884848673965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "distributed_test_env-vpc-private-eu-west-1b"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-private-eu-west-1b"
            },
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:subnet/subnet-059b580d35cf5161e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b580d35cf5161e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884848673965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "distributed_test_env-vpc-public-eu-west-1b"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc-public-eu-west-1b"
            },
            "vpc_id": "vpc-0f0ca25b7c8e5de2f"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884848673965:vpc/vpc-0f0ca25b7c8e5de2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060e506aa5e5d9cfa",
            "default_route_table_id": "rtb-09a9e43509076ae27",
            "default_security_group_id": "sg-034ec5439524e0dfe",
            "dhcp_options_id": "dopt-0c2344a0ace9ef94d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0ca25b7c8e5de2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a9e43509076ae27",
            "owner_id": "884848673965",
            "tags": {
              "Name": "distributed_test_env-vpc"
            },
            "tags_all": {
              "Name": "distributed_test_env-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}